# cofhe_coprocesssor

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .gitignore  README.md  pycofhe-0.1.0-cp311-cp311-linux_x86_64.whl  pyproject.toml
backend/artifacts/: example_config.json  example_config.local.json  log_config.json  openvector_cofhe_executor_contract_abi.json  openvector_cofhe_executor_op_price.json
backend/src/openvector_cofhe_coprocessor_backend/: __init__.py  __main__.py  app.py  cli.py
backend/src/openvector_cofhe_coprocessor_backend/client_networks/: client_network_interface.py  ethereum.py  web2_http.py
backend/src/openvector_cofhe_coprocessor_backend/common/: logger.py  lru_cache.py  request_response.py  storage.py
backend/src/openvector_cofhe_coprocessor_backend/common/utils/: json_utils.py
backend/src/openvector_cofhe_coprocessor_backend/core/: client_network.py  core_service.py  core_service_interface.py  request_response.py  storage.py
backend/src/test/: abi.json  cov_token.py
docs/: architecture.md
frontend/eth_sol/: .env.shared  README.md  hardhat.config.ts  package-lock.json  package.json
frontend/eth_sol/contracts/: lib.sol  openvector.sol
frontend/eth_sol/contracts/examples/: cov_token.sol
frontend/eth_sol/ignition/deployments/chain-84532/: deployed_addresses.json  journal.jsonl
frontend/eth_sol/ignition/deployments/chain_84532_erc20_update/: deployed_addresses.json  journal.jsonl
frontend/eth_sol/ignition/modules/: cov_token.ts  openvector.ts  ov_token.ts
(+26 files in other folders)
