[project]
name = "openvector-cofhe-coprocessor-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pulkit Chahar", email = "pulkitchahar91@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23.0",
    "pycofhe",
    "web3>=7.9.0",
]

[project.scripts]
openvector-cofhe-coprocessor-backend = "openvector_cofhe_coprocessor_backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
openvector-cofhe-coprocessor-backend = { workspace = true }
pycofhe = { path = "pycofhe-0.1.0-cp311-cp311-linux_x86_64.whl" }

[dependency-groups]
dev = [
    "openvector-cofhe-coprocessor-backend",
]
